edit guest mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,11 @@
     <string name="login_alert">Please fill in all fields or remove spaces</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="user_experience">• Intuitive Navigation: Seamlessly switch between features with a Bottom Navigation bar.\n\n• Secure Authentication: Log in via email or social media (Google) with Firebase.\n\n• Persistent Login: Stay logged in for uninterrupted planning.\n\n• Quick Start: Resume your plans instantly upon launch.</string>
+    <string name="Enhanced_Features">• Offline Access: View saved favorites and plans without internet.\n\n• Data Sync: Backup and sync your data seamlessly with Firebase.\n\n• Personalized Plans: Tailor meal plans to your dietary preferences.\n\n• Guest Mode: Browse categories, search, and view the Meal of the Day without logging in.</string>
+    <string name="Core_Features">• Meal of the Day: Discover a random meal daily for inspiration.\n\n• Advanced Search: Find recipes by category, country, or ingredient.\n\n• Categories and Countries: Browse meal categories and popular dishes by region.\n\n• Weekly Meal Planning: Easily plan and manage your weekly meals.\n\n• Favorites: Save recipes locally with Room for instant access.\n\n• Recipe Details: Explore ingredients, instructions, and nutritional info.</string>
+    <string name="Overview">MealPlanner is an Android app crafted to streamline your meal planning and inspire a healthier lifestyle. From browsing diverse recipes to organizing your weekly meals and saving favorites for offline access, MealPlanner puts you in charge of your diet with simplicity and style. Powered by TheMealDB API, it offers a personalized culinary journey at your fingertips.</string>
+    <string name="Technical_Highlights">• Powered by TheMealDB API for a vast recipe library.\n\n• Room Database for reliable local storage.\n\n• Firebase for robust authentication and cloud syncing.\n\n• Modern MVVM Architecture for a scalable, efficient design.</string>
+    <string name="Why_MealPlanner">Simplify your meal routine, eat healthier, and enjoy a tailored planning experience—all in one sleek app. Get started today and elevate your nutrition journey!</string>
 
 </resources>
